// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex/> should renders correctly 1`] = `
<div>
  <div
    class="sc-AykKD cykNJe"
  >
    <div
      class="sc-AykKC OPjhS"
    />
  </div>
</div>
`;

exports[`<Flex/> should renders correctly 2`] = `
<div>
  <div
    class="sc-AykKD jMGFhj"
  />
</div>
`;

exports[`<Flex/> should renders gapless 1`] = `
<div>
  <div
    class="sc-AykKD cLeKAM"
  />
</div>
`;
